Add alternate left-right images

--- a/site/index.html
+++ b/site/index.html
@@ -244,13 +244,18 @@
             </div>
         </div>
       </div>
-      <img src="img/dall-e3.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
       <h2 id="sez4">Cosa pensare di ChatGPT</h2>
       <p>
         L'introduzione di uno strumento come ChatGPT ha indubbiamente generato attenzione da parte di un pubblico molto ampio, soprattutto perché il suo utilizzo è attualmente di libero accesso da qualsiasi browser web.</p>
       <p>
         Dal suo lancio in Italia, lo scorso 3 Novembre 2022, il numero di utenti si è notevolmente incrementato. Ugualmente è avvenuto nel resto d'Europa e del mondo.
       </p>
+      <div class="image-container-right">
+        <figure>
+          <img src="img/dall-e3.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+          <figcaption>Inserire didascalia dell'immagine che abbia la forma di un racconto, per es. "DALL-E disegna (una determinata situazione)"</figcaption>
+        </figure>
+      </div>
       <p>
         Il fatto che sia uno strumento innovativo, d'altra parte, lo rende anche controverso. A questo proposito la nostra analisi si è concentrata su un'analisi del sentimento verso l'utilizzo e le sperimentazioni in atto con questa nuova tecnologia.
       </p>
@@ -302,7 +307,7 @@
   <!-- Parole e tendenze section -->
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="contact">
     <div class="w3-content">
-      <h1 class="w3-center"><b>Parole e tendenze</b></h1>
+      <h1 class="main-titles"><b>Parole e tendenze</b></h1>
       <div class="graphics-btn-container">
         <h2>Parole più frequenti</h2>
         <button id="graphics1-btn-words">Reddit</button>
@@ -310,20 +315,40 @@
         <button id="graphics3-btn-words">Twitter.com</button>
       </div>
       <div id="graphics-container-words" class="chartContainer"></div>
-      <img src="img/dall-e11.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+      <!-- la toglierei o ne farei un'altra per la sezione "ChatGPT è intelligente?" -->
+      <!--
+      <div class="image-container">
+        <figure>
+          <img src="img/dall-e11.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+          <figcaption>Inserire didascalia dell'immagine che abbia la forma di un racconto, per es. "DALL-E disegna (una determinata situazione)"</figcaption>
+        </figure>
+      </div>
+      -->
       <h3>Parole più frequenti su Twitter in Inglese</h3>
-      <img src="img/WordcloudENG.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+      <div class="image-container">
+        <figure>
+          <img src="img/WordcloudENG.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+          <figcaption>WordCloud: rappresentazione visuale delle parole più usate su Twitter.com</figcaption>
+        </figure>
+      </div>
       <p>
-        Scrivere qui breve spiegazione dei risultati. (testo affiancato all'immagine)
+        Scrivere qui breve spiegazione dei risultati (testo affiancato all'immagine).
+        Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <h3>Parole più frequenti su Twitter in Italiano</h3>
-      <img src="img/WordcloudITA.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+      <div class="image-container">
+        <figure>
+          <img src="img/WordcloudITA.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+          <figcaption>WordCloud: rappresentazione visuale delle parole più usate su Twitter.it</figcaption>
+        </figure>
+      </div>
       <p>
-        Scrivere qui breve spiegazione dei risultati. (testo affiancato all'immagine)
+        Scrivere qui breve spiegazione dei risultati (testo affiancato all'immagine).
+        Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
 
       <div class="graphics-btn-container">
-        <h3>Trigrammi più frequenti</h3>
+        <h2>Trigrammi più frequenti</h2>
         <button id="graphics1-btn-trigrams">Reddit</button>
         <button id="graphics2-btn-trigrams">Twitter.it</button>
         <button id="graphics3-btn-trigrams">Twitter.com</button>
@@ -334,13 +359,21 @@
 
   <!-- Utilizzi section -->
   <div class="w3-container w3-light-grey w3-center w3-padding-32" id="utilizzi">
-    <h1><b>Interazione Uomo Macchina</b></h1>
-    <img src="img/dall-e5.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+    <h1 class="main-titles"><b>Interazione Uomo Macchina</b></h1>
+    <div class="image-container">
+      <figure>
+        <img src="img/dall-e5.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+        <figcaption>Inserire didascalia dell'immagine che abbia la forma di un racconto, per es. "DALL-E disegna (una determinata situazione)"</figcaption>
+      </figure>
+    </div>
     <div class="w3-content w3-justify">
       <h2>Utilizzi di ChatGPT</h2>
-      <p>Usi di ChatGPT.
+      <p>
+        Usi di ChatGPT.
+        Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
 
+      <!--
       <hr class="w3-opacity">
 
       <h4 class="w3-padding-16">How much I charge</h4>
@@ -379,18 +412,24 @@
           </ul>
         </div>
       </div>
+      -->
     </div>
   </div>
 
    <!-- Intelligenza section -->
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="intelligenza">
     <div class="w3-content">
-      <h1 class="w3-center"><b>Intelligenza Artificiale</b></h1>
-      <img src="img/dall-e4.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+      <h1 class="main-titles"><b>Intelligenza Artificiale</b></h1>
       <h2>ChatGPT è realmente in grado di capire?</h2>
       <p>I large language models come ChatGPT sono talmente grandi e complessi da suscitare sorprese inaspettate: hanno iniziato a mostrare comportamenti sorprendenti, che non erano stati previsti. </br>
        “Sono sorpreso dalle capacità che questi modelli hanno sviluppato” <a href="https://www.quantamagazine.org/the-unpredictable-abilities-emerging-from-large-ai-models-20230316/" target="_blank"> ha dichiarato Ethan Dyer</a>, computer scientist di Google Research che lavora da anni nel campo dell’AI. “È sorprendente perché questi modelli in teoria hanno una sola direttiva: prendere in input una stringa di testo e predire cosa verrà dopo, ripetutamente, su basi puramente statistiche. Gli esperti nel settore avevano previsto che con l’aumentare della dimensione dei dati sarebbero migliorate le performance su task già noti, ma non si aspettavano che i modelli all’improvviso sarebbero stati in grado di svolgere così tante nuove (e imprevedibili) attività”.</p>
-       <h2>Proprietà emergenti</h2>
+      <div class="image-container-right">
+        <figure>
+          <img src="img/dall-e4.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+          <figcaption>Inserire didascalia dell'immagine che abbia la forma di un racconto, per es. "DALL-E disegna (una determinata situazione)"</figcaption>
+        </figure>
+      </div>
+      <h2>Proprietà emergenti</h2>
       <p>A quanto pare i LLMs sembrano sviluppare centinaia di attività emergenti - dai calcoli matematici alla produzione di testi e di codici, fino al riconoscimento dei titoli di film tramite emoji (come in un esperimento condotto dal team di Dyer).</br>
       I modelli linguistici odierni sono stati dimensionati principalmente in base a tre fattori: quantità di calcolo, numero di parametri e dimensione del set di dati di addestramento. Un'abilità è considerata "emergente" se non è presente nei modelli più piccoli ma lo è in quelli più grandi. In generale, si può considerare l'emergere di nuove proprietà come una funzione di molte variabili correlate, la scala in cui si osserva per la prima volta l'emergere di un'abilità dipende da una serie di fattori e non è una proprietà immutabile, le prestazioni sembrano migliorare notevolmente oltre un certo ordine di grandezza dei parametri.
       “I fenomeni complessi possono essere ricondotti a una semplice legge probabilistica, nel caso di un language model si tratta di predire la prossima parola" ha dichiarato il professor Giuseppe Attardi in <a href= "https://www.youtube.com/watch?v=ej5lEP1bmdQ" target="_blank">un'intervista online</a> in cui ci si interroga sullo sviluppo delle AI. </br>
