Add alternative background color

--- a/site/index.html
+++ b/site/index.html
@@ -83,41 +83,40 @@
     </div>
   </div>
  <!-- Storia section -->
-  <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="storia">
+  <div class="w3-container w3-center w3-padding-32" id="storia">
     <div class="w3-content w3-justify">
-      <div class="text-content">
+      <div class="text-content"></div>
+
+      <div class="w3-container w3-center w3-padding-32">
+
         <h1 class="main-titles"><b>La storia</b></h1>
 
-        <div id="top-of-toc" class="css-1ez01tu-BodyContainer e1s8k40s0">
+        <div id="top-of-toc1" class="css-1ez01tu-BodyContainer e1s8k40s0">
           <div class="css-uiylu1-LeftRailComponents e1s8k40s2">
-              <div class="TocContainer">
-                  <div id="toc-block" class="TableOfContentsContainer">
-                      <a href="#sez1" id="toc-element-0" class="ElementWrapper-choicer">
-                          <div class="pallino"></div>
-                          <div class="scritta">
-                              <div>Che cosa è ChatGPT</div>
-                          </div>
-                      </a>
-                      <a href="#sez2" id="toc-element-1" class="ElementWrapper-choicer">
-                          <div class="pallino"></div>
-                          <div class="scritta">
-                              <div>Come funziona ChatGPT</div>
-                          </div>
-                      </a>
-                      <a href="#sez3" id="toc-element-3" class="ElementWrapper-choicer">
-                          <div class="pallino"></div>
-                          <div class="scritta">
-                              <div>I neuroni artificiali</div>
-                          </div>
-                      </a>
+            <div class="TocContainer">
+              <div id="toc-block1" class="TableOfContentsContainer">
+                <a href="#sez1" id="toc-element-01" class="ElementWrapper-choicer">
+                  <div class="pallino"></div>
+                  <div class="scritta">
+                    <div>Che cosa è ChatGPT</div>
                   </div>
+                </a>
+                <a href="#sez2" id="toc-element-1-1" class="ElementWrapper-choicer">
+                  <div class="pallino"></div>
+                  <div class="scritta">
+                    <div>Come funziona ChatGPT</div>
+                  </div>
+                </a>
+                <a href="#sez3" id="toc-element-3-1" class="ElementWrapper-choicer">
+                  <div class="pallino"></div>
+                  <div class="scritta">
+                    <div>I neuroni artificiali</div>
+                  </div>
+                </a>
               </div>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">
-
         <img src="img/dall-e1.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
         <div class="w3-content w3-justify">
           <h2 id="sez1">Cos’è ChatGPT</h2>
@@ -145,37 +144,38 @@
         Queste nuove tecnologie hanno portato allo sviluppo dei modelli contestuali del linguaggio".</p>
     </div>
   </div>
-
+    </div>
+  </div>
   <!-- Sentiment analysis section -->
   <div class="w3-container w3-light-grey w3-center w3-padding-32" id="about">
 
     <div class="w3-content w3-justify">
       <h1 class="main-titles"><b>Ti odio o ti amo?</b></h1>
 
-      <div id="top-of-toc" class="css-1ez01tu-BodyContainer e1s8k40s0">
+      <div id="top-of-toc2" class="css-1ez01tu-BodyContainer e1s8k40s0">
         <div class="css-uiylu1-LeftRailComponents e1s8k40s2">
-            <div class="TocContainer">
-                <div id="toc-block" class="TableOfContentsContainer">
-                    <a href="#sez4" id="toc-element-0" class="ElementWrapper-choicer">
-                        <div class="pallino"></div>
-                        <div class="scritta">
-                            <div>L'arrivo di ChatGPT</div>
-                        </div>
-                    </a>
-                    <a href="#sez5" id="toc-element-1" class="ElementWrapper-choicer">
-                        <div class="pallino"></div>
-                        <div class="scritta">
-                            <div>Sentiment analysis</div>
-                        </div>
-                    </a>
-                    <a href="#sez6" id="toc-element-3" class="ElementWrapper-choicer">
-                        <div class="pallino"></div>
-                        <div class="scritta">
-                            <div>Sentiment Analysis sui dataset in italiano e inglese</div>
-                        </div>
-                    </a>
+          <div class="TocContainer">
+            <div id="toc-block2" class="TableOfContentsContainer">
+              <a href="#sez4" id="toc-element-02" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>L'arrivo di ChatGPT</div>
                 </div>
+              </a>
+              <a href="#sez5" id="toc-element-1-2" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>Sentiment analysis</div>
+                </div>
+              </a>
+              <a href="#sez6" id="toc-element-3-2" class="ElementWrapper-choicer">
+                <div class="pallino"></div>
+                <div class="scritta">
+                  <div>Sentiment Analysis sui dataset in italiano e inglese</div>
+                </div>
+              </a>
             </div>
+          </div>
         </div>
         <img src="img/dall-e3.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
       </div>
@@ -340,8 +340,6 @@
   <div class="w3-black w3-center w3-padding-24"> </div>
 
 <!-- End page content -->
-</div>
-</div>
 </div>
 </div>
 </body>
