--- a/site/index.html
+++ b/site/index.html
@@ -12,14 +12,14 @@
 </style>
 <script src="script.js" defer></script>
 <!--<script type="text/javascript" src="grafici.js"></script>-->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.8.0"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.8.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body class="w3-light-grey w3-content">
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-  <span class="w3-left w3-padding"><h1>ChatGPT</h1></span>
+  <h1 class="w3-left w3-padding">ChatGPT</h1>
   <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
 </header>
 <div id="content">
@@ -52,20 +52,14 @@
   <div class="w3-row">
     <div class="w3-third">
       <img src="img/dall-e7.png" onclick="onClick(this)" alt="DALL-E è un prodotto sviluppato da OpenAI">
-      <img src="" onclick="onClick(this)" alt="">
-      <img src="" onclick="onClick(this)" alt="">
     </div>
 
     <div class="w3-third">
       <img src="img/dall-e8.png" onclick="onClick(this)" alt="Permette di creare immagini inserendo una stringa di testo">
-      <img src="" onclick="onClick(this)" alt="">
-      <img src="" onclick="onClick(this)" alt="">
     </div>
 
     <div class="w3-third">
       <img src="img/dall-e9.png" onclick="onClick(this)" alt="">
-      <img src="" onclick="onClick(this)" alt="">
-      <img src="" onclick="onClick(this)" alt="">
     </div>
   </div>
 
@@ -78,7 +72,7 @@
       <div style="float: right">
 
       </div>
-      <img id="img01" >
+      <div id="img01-container"></div>
 
     </div>
   </div>
@@ -117,7 +111,7 @@
             </div>
           </div>
         </div>
-        <img src="img/dall-e1.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+        <img src="img/dall-e1.png" alt="" class="w3-image w3-center w3-padding-32" width="600" height="650">
         <div class="w3-content w3-justify">
           <h2 id="sez1">Cos’è ChatGPT</h2>
           <p>ChatGPT è un chatbot sviluppato dalla società americana OpenAI, fondata da Elon Musk, Sam Altman Greg Brockman, Ilya Sutskever, Wojciech Zaremba, and John Schulman nel 2015.<br>
@@ -177,7 +171,7 @@
             </div>
           </div>
         </div>
-        <img src="img/dall-e3.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+        <img src="img/dall-e3.png" alt="" class="w3-image w3-center w3-padding-32" width="600" height="650">
       </div>
 
       <h2 id="sez4">L'arrivo di ChatGPT</h2>
@@ -268,7 +262,7 @@
   <!-- Utilizzi section -->
   <div class="w3-container w3-light-grey w3-center w3-padding-32" id="utilizzi">
     <h1 class="main-titles"><b>Interazione Uomo Macchina</b></h1>
-   <img src="img/dall-e5.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+   <img src="img/dall-e5.png" alt="" class="w3-image w3-center w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify">
       <h2>Utilizzi di ChatGPT</h2>
       <p>
@@ -284,7 +278,7 @@
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="intelligenza">
     <div class="w3-content">
       <h1 class="main-titles"><b>Intelligenza Artificiale</b></h1>
-      <img src="img/dall-e4.png" alt="" class="w3-image w3-padding-32" width="600" height="650">
+      <img src="img/dall-e4.png" alt="" class="w3-image w3-center w3-padding-32" width="600" height="650">
       <h2>ChatGPT è realmente in grado di capire?</h2>
       <p>I large language models come ChatGPT sono talmente grandi e complessi da suscitare sorprese inaspettate: hanno iniziato a mostrare comportamenti sorprendenti, che non erano stati previsti. <br>
        “Sono sorpreso dalle capacità che questi modelli hanno sviluppato” <a href="https://www.quantamagazine.org/the-unpredictable-abilities-emerging-from-large-ai-models-20230316/" target="_blank"> ha dichiarato Ethan Dyer</a>, computer scientist di Google Research che lavora da anni nel campo dell’AI. “È sorprendente perché questi modelli in teoria hanno una sola direttiva: prendere in input una stringa di testo e predire cosa verrà dopo, ripetutamente, su basi puramente statistiche. Gli esperti nel settore avevano previsto che con l’aumentare della dimensione dei dati sarebbero migliorate le performance su task già noti, ma non si aspettavano che i modelli all’improvviso sarebbero stati in grado di svolgere così tante nuove (e imprevedibili) attività”.</p>
