--- a/site/index.html
+++ b/site/index.html
@@ -17,27 +17,24 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body class="w3-light-grey w3-content">
-<!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-  <h1 class="w3-left w3-padding">ChatGPT</h1>
-  <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
-</header>
-<div id="content">
 
 <!-- Sidebar/menu -->
-<div id="sidebar-container">
-  <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" id="mySidebar"><br>
-    <h3 class="w3-padding-64 w3-center"><b>ChatGPT</b></h3>
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
-    <a href="#storia" onclick="w3_close()" class="w3-bar-item w3-button">La storia</a>
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">DALL-E</a>
-    <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Ti odio o ti amo?</a>
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Parole e tendenze</a>
-    <a href="#utilizzi" onclick="w3_close()" class="w3-bar-item w3-button">Interazione uomo macchina</a>
-    <a href="#intelligenza" onclick="w3_close()" class="w3-bar-item w3-button">Intelligenza Artificiale</a>
-  </nav>
+<nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" id="mySidebar"><br>
+  <h3 class="w3-padding-64 w3-center"><b>ChatGPT</b></h3>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
+  <a href="#storia" onclick="w3_close()" class="w3-bar-item w3-button">La storia</a>
+  <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">DALL-E</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Ti odio o ti amo?</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Parole e tendenze</a>
+  <a href="#utilizzi" onclick="w3_close()" class="w3-bar-item w3-button">Interazione uomo macchina</a>
+  <a href="#intelligenza" onclick="w3_close()" class="w3-bar-item w3-button">Intelligenza Artificiale</a>
+</nav>
 
-</div>
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
+  <span class="w3-left w3-padding">ChatGPT</span>
+  <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
+</header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" title="close side menu" id="myOverlay"></div>
@@ -334,7 +331,6 @@
   <div class="w3-black w3-center w3-padding-24"> </div>
 
 <!-- End page content -->
-</div>
 </div>
 </body>
 </html>
