Fix sidebar padding

--- a/site/index.html
+++ b/site/index.html
@@ -19,15 +19,15 @@
 <body class="w3-light-grey w3-content">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" id="mySidebar"><br>
-  <h3 class="w3-padding-64 w3-center"><b>ChatGPT</b></h3>
+<nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top" id="mySidebar"><br>
+  <h3 class="w3-padding-64" id="title-sidebar"><b>ChatGPT</b></h3>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
-  <a href="#storia" onclick="w3_close()" class="w3-bar-item w3-button">La storia</a>
-  <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">DALL-E</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Ti odio o ti amo?</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Parole e tendenze</a>
-  <a href="#utilizzi" onclick="w3_close()" class="w3-bar-item w3-button">Interazione uomo macchina</a>
-  <a href="#intelligenza" onclick="w3_close()" class="w3-bar-item w3-button">Intelligenza Artificiale</a>
+  <a href="#storia" onclick="w3_close()" class="w3-bar-item w3-button-sidebar">La storia</a>
+  <a href="#" onclick="w3_close()" class="w3-bar-item w3-button-sidebar">DALL-E</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button-sidebar">Ti odio o ti amo?</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button-sidebar">Parole e tendenze</a>
+  <a href="#utilizzi" onclick="w3_close()" class="w3-bar-item w3-button-sidebar">Interazione uomo macchina</a>
+  <a href="#intelligenza" onclick="w3_close()" class="w3-bar-item w3-button-sidebar">Intelligenza Artificiale</a>
 </nav>
 
 <!-- Top menu on small screens -->
