Force images to be centered

--- a/site/index.html
+++ b/site/index.html
@@ -168,7 +168,7 @@
             </div>
           </div>
         </div>
-        <img src="img/dall-e3.png" alt="" class="w3-image w3-center w3-padding-32" width="600" height="650">
+        <img src="img/dall-e3.png" alt="" class="w3-image w3-center w3-padding-32 force-center" width="600" height="650">
       </div>
 
       <h2 id="sez4">L'arrivo di ChatGPT</h2>
@@ -206,7 +206,7 @@
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="contact">
     <div class="w3-content">
       <h1 class="main-titles"><b>Parole e tendenze</b></h1>
-      <img src="img/dall-e11.png" alt="" class="w3-image w3-padding-32 w3-center" width="600" height="650">
+      <img src="img/dall-e11.png" alt="" class="w3-image w3-padding-32 w3-center force-center" width="600" height="650">
       <div class="graphics-btn-container">
         <h2>Parole più frequenti</h2>
         <button id="graphics1-btn-words">Reddit</button>
@@ -275,7 +275,7 @@
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="intelligenza">
     <div class="w3-content">
       <h1 class="main-titles"><b>Intelligenza Artificiale</b></h1>
-      <img src="img/dall-e4.png" alt="" class="w3-image w3-center w3-padding-32" width="600" height="650">
+      <img src="img/dall-e4.png" alt="" class="w3-image w3-center w3-padding-32 force-center" width="600" height="650">
       <h2>ChatGPT è realmente in grado di capire?</h2>
       <p>I large language models come ChatGPT sono talmente grandi e complessi da suscitare sorprese inaspettate: hanno iniziato a mostrare comportamenti sorprendenti, che non erano stati previsti. <br>
        “Sono sorpreso dalle capacità che questi modelli hanno sviluppato” <a href="https://www.quantamagazine.org/the-unpredictable-abilities-emerging-from-large-ai-models-20230316/" target="_blank"> ha dichiarato Ethan Dyer</a>, computer scientist di Google Research che lavora da anni nel campo dell’AI. “È sorprendente perché questi modelli in teoria hanno una sola direttiva: prendere in input una stringa di testo e predire cosa verrà dopo, ripetutamente, su basi puramente statistiche. Gli esperti nel settore avevano previsto che con l’aumentare della dimensione dei dati sarebbero migliorate le performance su task già noti, ma non si aspettavano che i modelli all’improvviso sarebbero stati in grado di svolgere così tante nuove (e imprevedibili) attività”.</p>
