--- a/site/index.html
+++ b/site/index.html
@@ -140,7 +140,7 @@
   <!-- Sentiment analysis section -->
   <div class="w3-container w3-light-grey w3-center w3-padding-32" id="about">
 
-    <div class="w3-content w3-justify">
+    <div class="w3-content w3-justify w3-container">
       <h1 class="main-titles"><b>Ti odio o ti amo?</b></h1>
 
       <div id="top-of-toc2" class="css-1ez01tu-BodyContainer e1s8k40s0">
@@ -191,7 +191,7 @@
 
 
       <div class="graphics-btn-container">
-        <h3>Sentimento</h3>
+        <h3 class="green">Sentimento</h3>
         <button id="graphics1-btn-sentiment">Reddit</button>
         <button id="graphics2-btn-sentiment">Twitter.it</button>
         <button id="graphics3-btn-sentiment">Twitter.com</button>
@@ -204,20 +204,18 @@
   <div class="w3-container w3-light-grey w3-center w3-padding-32" id="utilizzi">
     <h1 class="main-titles"><b>Interazione Uomo Macchina</b></h1>
    <img src="img/dall-e5.png" alt="Robot che dialoga con una bambina" class="w3-image w3-center w3-padding-32" width="600" height="650">
-    <div class="w3-content w3-justify">
+    <div class="w3-content w3-justify w3-container">
       <h2>Utilizzi di ChatGPT</h2>
       <p>
         Le persone interagiscono con ChatGPT in maniera variegata, dando libero sfogo alle proprie fantasie, inclinazioni e interessi. <br>
         In generale, il chatbot viene utilizzato per scrivere elaborati di testo di vario tipo (email, presentazioni, introduzioni, racconti, sceneggiature etc) e per fare sintesi; è di aiuto nei compiti scolastici e accademici, e nella programmazione (è usato per creare siti web, o per fare debugging dei codici e chiedere spiegazioni). 
       </p>
-
-
     </div>
   </div>
 
   <!-- Parole e tendenze section -->
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="contact">
-    <div class="w3-content">
+    <div class="w3-content w3-justify w3-container">
       <h1 class="main-titles"><b>Parole e tendenze</b></h1>
       <img src="img/dall-e11.png" alt="Robot che esegue calcoli" class="w3-image w3-padding-32 w3-center force-center" width="600" height="650">
       <div class="graphics-btn-container">
@@ -244,6 +242,7 @@
           <figcaption>WordCloud: rappresentazione visuale delle parole più usate su Twitter.com</figcaption>
         </figure>
       </div>
+      <h3>Esplorazioni sui dati in inglese</h3>
       <p>
         <b class="green">Math/Matematica</b>: svariati tweet in lingua inglese si riferiscono all'incapacità di ChatGPT di svolgere compiti matematici, mentre in italiano i post contenenti la parola "matematica" sono legati all'uso di ChatGPT da parte degli studenti a scuola (abitudine che suscita preoccupazioni di carattere pedagogico ed educativo).
       </p>
@@ -281,6 +280,7 @@
           <figcaption>WordCloud: rappresentazione visuale delle parole più usate su Twitter.it</figcaption>
         </figure>
       </div>
+      <h3>Esplorazioni sui dati in italiano</h3>
       <p>
         Nel Corpus di tweet in italiano non compaiono post relativi ad un utilizzo erotico di ChatGPT, mentre ricercando nei dati attraverso una keyword semanticamente vicina, ma più diretta, sono state individuate alcune informazioni interessanti:
       </p>
@@ -317,7 +317,7 @@
 
    <!-- Intelligenza section -->
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="intelligenza">
-    <div class="w3-content">
+    <div class="w3-content w3-justify w3-container">
       <h1 class="main-titles"><b>Intelligenza Artificiale</b></h1>
       <img src="img/dall-e4.png" alt="Robot immerso in una dimensione onirica" class="w3-image w3-center w3-padding-32 force-center" width="600" height="650">
       <h2>ChatGPT è realmente in grado di capire?</h2>
